clapi_macros/test_suite/tests/ui/fail/invalid_arg_value/invalid_arg_min.rs
use clapi::macros::*;

#[command]
#[arg(x, min="xyz")]
fn app(x: Vec<i64>){}

fn main(){}