clapi_macros/test_suite/tests/ui/fail/invalid_arg_value/invalid_arg_min.stderr
error: custom attribute panicked
 --> $DIR/invalid_arg_min.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: option `min` is expected to be an integer literal
